added a few basic projects to the project page; remember to flesh this out more.

--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,10 @@
 <br /> 
 <br /> 
 <br /> 
-<div class="width">Oops, things are still in a very great state of flux currently.</div> 
+<div class="width">Currently, I am working on the following projects:
+<br /> 
+<ul><li>kobol</li><li>cluster_chef</li><li>tumen_miner</li></ul>
+</div> 
 <br /> 
 <br /> 
 <br /> 
