add link to kobol github page

--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
 <br /> 
 <div class="width">Currently, I am working on the following projects:
 <br /> 
-<ul><li>kobol</li><li>cluster_chef</li><li>tumen_miner</li></ul>
+<ul><li><a href="http://github.com/schade/kobol">kobol</a></li><li>cluster_chef</li><li>tumen_miner</li><li>VyncUp</li></ul>
 </div> 
 <br /> 
 <br /> 
