added additional link for cluster_chef

--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
 <br /> 
 <div class="width">Currently, I am working on the following projects:
 <br /> 
-<ul><li><a href="http://github.com/schade/kobol">kobol</a>: a set of modular libraries for building X applications</li><li><a href="http://github.com/schade/cluster_chef">cluster_chef</a>: my personal cluster_chef homebase</li><li><a href="http://github.com/schade/tumen_miner">tumen_miner</a>: experimental BitCoin miner; uses WebCL for pooled block calculations.</li><li>VyncUp</li></ul>
+<ul><li><a href="http://github.com/schade/kobol">kobol</a>: a set of modular libraries for building X applications</li><li><a href="http://github.com/schade/cluster_chef">cluster_chef</a>: my personal fork of <a href="http://github.com/infochimps-labs/cluster_chef-homebase">infochimps-labs/cluster_chef-homebase</a></li><li><a href="http://github.com/schade/tumen_miner">tumen_miner</a>: experimental BitCoin miner; uses WebCL for pooled block calculations.</li><li>VyncUp</li></ul>
 </div> 
 <br /> 
 <br /> 
