--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 <br /> 
 <br /> 
 <br /> 
-<div class="width">Oops, things are still in a very great state of flux currently.</div> 
+<div class="width">If you have any questions or want to offer me interesting work in my field, I can be reached at <a href="mailto:jerry.w.jackson@gmail.com?Subject=Referred by schade.github.com contact page">this</a> email address.</div> 
 <br /> 
 <br /> 
 <br /> 
