setting up dns for github pages

--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
 <br /> 
 <div class="width">Currently, I am working on the following projects:
 <br /> 
-<ul><li><a href="http://github.com/schade/ironfan_homebase">homebase</a>: my personal fork of <a href="http://github.com/infochimps-labs/ironfan-homebase">infochimps-labs/ironfan-homebase</a></li><li><a href="http://github.com/schade/kobol">kobol</a>: a set of modular libraries for building X applications</li><li><a href="http://github.com/schade/pawl">pawl</a>: a collection of utilities intended to be useful for newer features in CouchDB</li><li><a href="http://github.com/schade/tumen_miner">tumen_miner</a>: experimental BitCoin miner; uses WebCL for pooled block calculations.</li><li>VyncUp</li></ul>
+<ul><li><a href="http://github.com/schade/ironfan_homebase">homebase</a>: my personal fork of <a href="http://github.com/infochimps-labs/ironfan-homebase">infochimps-labs/ironfan-homebase</a></li><li><a href="http://github.com/schade/kobol">kobol</a>: a set of modular libraries for building X applications</li><li><a href="http://github.com/schade/pawl">pawl</a>: a collection of utilities intended to be useful for newer features in CouchDB</li><li><a href="http://github.com/schade/tumen_miner">tumen_miner</a>: experimental BitCoin miner; uses WebCL for pooled block calculations.</li><li><a href="http://dev.vyncup.t9productions.com:44384/tdh/_design/tdh_public/tdhmockup.html">Vyncup</a>: an event database </li></ul>
 </div> 
 <br /> 
 <br /> 
