--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
 </head> 
 <body> 
 <center><p> 
-<div id="nav"><a href="about.html">About aCoL</a>  |  <a href="index.html">Home Page</a>  |  <a href="contact.html">Contact aCoL</a>  |  <a href="projects.html" id="current">Current Projects</a></div> 
+<div id="nav"><a href="about.html">About aCoL</a>  |  <a href="index.html">Home Page</a>   |  <a href="weblog.html">Blog Entries</a>  |  <a href="contact.html">Contact aCoL</a>  |  <a href="projects.html" id="current">Current Projects</a></div> 
 <br /> 
 <br /> 
 <br /> 
