--- a/about.html
+++ b/about.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <head> 
 <title>A Committee of Lunatics - About</title> 
@@ -7,7 +6,7 @@
 </head> 
 <body> 
 <center><p> 
-<div id="nav"><a href="about.html" id="current">About aCoL</a>  |  <a href="index.html">Home Page</a>  |  <a href="contact.html">Contact aCoL</a>  |  <a href="projects.html">Current Projects</a></div> 
+<div id="nav"><a href="about.html" id="current">About aCoL</a>  |  <a href="index.html">Home Page</a>  |  <a href="weblog.html">Blog Entries</a>  |  <a href="contact.html">Contact aCoL</a>  |  <a href="projects.html">Current Projects</a></div> 
 <br /> 
 <br /> 
 <br /> 
