--- a/weblog.html
+++ b/weblog.html
@@ -13,10 +13,49 @@
 <br /> 
 <br /> 
 <br /> 
-<div class="width">Welcome to my new blog. I have a little coding and cleanup before entries start showing up here.</div> 
-<br /> 
-<br /> 
-<div class="width">Oops, things are still in a very great state of flux currently; check back soon for changes.</div> 
+<div class="width">## A Little Background Information ##
+
+I'm sure that some of you may know how much I truly abhor about the general state of 'blogging' these days. I really and truly detest having to take the time to rearrange my thoughts in a manner easy for other to understand. I didn't  have these epiphanies or follow these mental tangents in anything resembling a 'normal' mental state. I don't think like you humans, at all. I swear I lose brain cells everytime someone asks me to explain what I just said. It's 
+
+However, I have also come to the conclusion (quite painfully I might add) that I really can't get around it anymore if I want to be taken seriously these days in my chosen field. 
+
+With that said, let's get started and hope things don't 'esplode' all over us...
+
+### So what exactly is 'a Committee of Lunatics'? ###
+
+Each and every has a 'Committee of Lunatics' within us. These are the facets that make us who we are. A very few of us can actually talk back and forth between each facet, using this information to better ourselves and those around us. As for proof of this, I give you the following data to contemplate at your leisure...  
+
+#### Prologue ####
+
+_Where do I begin... What slippery slope must we traverse... What dark knowledge is safe to share and what is undesirous of same; and while we're thinking about it, do I even know how to tell the difference..._
+
+A long time ago when asked to write a blurb for a unnamed social media site, I wrote simply this:
+
+_Who I am is strangely difficult for me to explain to someone else...
+Sometimes, I do not believe that I, myself, know for sure...
+A safe description would be the 'odd man out' as it were...
+Always striving towards something, yet jaded by the enormity of it all._
+
+Now, don't get me wrong... I would still be glad to feel justified with merely prattling off some meaningless drivel to explain my presence here; or even content with the thought of being allowed to only 'allude' with hints, and mayhap, a shadowy glimpse of those daemons who drive my 'particular' intellectual thirst which seem so evident to those who may have actually met me.
+
+_But I digress..._
+
+#### Onward ####
+
+_Now, where was I? Oh, yes... The 'reason' for my presence here._
+
+_&lt;hrm, so many tangents... so little time... Why am I here, anyway?&gt;_
+
+Ah hah! but I have already told you so much about me; what more is there to tell you?
+
++    Should I tell you that, 'This specimen exhibits all the signs of dementia   we would expect from an average human.'?
++    Would you be concerned if I admitted to any of the deeper whorls and ridges  that make up the twisted, scorched plains of my own mental landscape?
+
+_&lt;I think not, sonny Jim&gt; - [...but I must tell them something...]_
+
+_discussion tabled until internal committee decides on the proper response_
+_-- @the Management_
+</div> 
 <br /> 
 <br /> 
 <br /> 
