--- a/weblog.html
+++ b/weblog.html
@@ -27,34 +27,35 @@ Each and every has a 'Committee of Lunatics' within us. These are the facets tha
 <br /><br />
 #### Prologue ####
 <br /><br />
-_Where do I begin... What slippery slope must we traverse... What dark knowledge is safe to share and what is undesirous of same; and while we're thinking about it, do I even know how to tell the difference..._
+<i>Where do I begin... What slippery slope must we traverse... What dark knowledge is safe to share and what is undesirous of same; and while we're thinking about it, do I even know how to tell the difference...>/i>
 <br /><br />
 A long time ago when asked to write a blurb for a unnamed social media site, I wrote simply this:
 <br /><br />
-_Who I am is strangely difficult for me to explain to someone else...
+<i>Who I am is strangely difficult for me to explain to someone else...
 Sometimes, I do not believe that I, myself, know for sure...
 A safe description would be the 'odd man out' as it were...
-Always striving towards something, yet jaded by the enormity of it all._
+Always striving towards something, yet jaded by the enormity of it all.</i>
 <br /><br />
 Now, don't get me wrong... I would still be glad to feel justified with merely prattling off some meaningless drivel to explain my presence here; or even content with the thought of being allowed to only 'allude' with hints, and mayhap, a shadowy glimpse of those daemons who drive my 'particular' intellectual thirst which seem so evident to those who may have actually met me.
 <br /><br />
-_But I digress..._
+<i>But I digress...</i>
 <br /><br />
 #### Onward ####
 <br /><br />
-_Now, where was I? Oh, yes... The 'reason' for my presence here._
+<i>Now, where was I? Oh, yes... The 'reason' for my presence here.</i>
 <br /><br />
-_&lt;hrm, so many tangents... so little time... Why am I here, anyway?&gt;_
+<i>&lt;hrm, so many tangents... so little time... Why am I here, anyway?&gt;</i>
 <br /><br />
 Ah hah! but I have already told you so much about me; what more is there to tell you?
 <br /><br />
-+    Should I tell you that, 'This specimen exhibits all the signs of dementia   we would expect from an average human.'?
-+    Would you be concerned if I admitted to any of the deeper whorls and ridges  that make up the twisted, scorched plains of my own mental landscape?
+<ul><li>Should I tell you that, 'This specimen exhibits all the signs of dementia   we would expect from an average human.'?</li>
+<li>Would you be concerned if I admitted to any of the deeper whorls and ridges  that make up the twisted, scorched plains of my own mental landscape?</li></ul>
 <br /><br />
-_&lt;I think not, sonny Jim&gt; - [...but I must tell them something...]_
+<i>&lt;I think not, sonny Jim&gt; - [...but I must tell them something...]</i>
 <br /><br />
-_discussion tabled until internal committee decides on the proper response_<br />
-_-- @the Management_
+<i>discussion tabled until internal committee decides on the proper response</i>
+<br />
+<i>-- @the Management</i>
 </div> 
 <br /> 
 <br /> 
