--- a/weblog.html
+++ b/weblog.html
@@ -25,7 +25,7 @@ With that said, let's get started and hope things don't 'esplode' all over us...
 <br /><br />
 Each and every has a 'Committee of Lunatics' within us. These are the facets that make us who we are. A very few of us can actually talk back and forth between each facet, using this information to better ourselves and those around us. As for proof of this, I give you the following data to contemplate at your leisure...  
 <br /><br />
-<h4>Prologue<>/h4>
+<h4>Prologue</h4>
 <br /><br />
 <i>Where do I begin... What slippery slope must we traverse... What dark knowledge is safe to share and what is undesirous of same; and while we're thinking about it, do I even know how to tell the difference...>/i>
 <br /><br />
