--- a/weblog.html
+++ b/weblog.html
@@ -27,7 +27,7 @@ Each and every has a 'Committee of Lunatics' within us. These are the facets tha
 <br /><br />
 <h4>Prologue</h4>
 <br /><br />
-<i>Where do I begin... What slippery slope must we traverse... What dark knowledge is safe to share and what is undesirous of same; and while we're thinking about it, do I even know how to tell the difference...>/i>
+<i>Where do I begin... What slippery slope must we traverse... What dark knowledge is safe to share and what is undesirous of same; and while we're thinking about it, do I even know how to tell the difference...</i>
 <br /><br />
 A long time ago when asked to write a blurb for a unnamed social media site, I wrote simply this:
 <br /><br />
