--- a/weblog.html
+++ b/weblog.html
@@ -48,8 +48,9 @@ Now, don't get me wrong... I would still be glad to feel justified with merely p
 <br /><br />
 Ah hah! but I have already told you so much about me; what more is there to tell you?
 <br /><br />
-<ul><li>Should I tell you that, 'This specimen exhibits all the signs of dementia   we would expect from an average human.'?</li>
-<li>Would you be concerned if I admitted to any of the deeper whorls and ridges  that make up the twisted, scorched plains of my own mental landscape?</li></ul>
+<ul><li>Should I tell you that, 'This specimen exhibits all the signs of dementia we would expect from an average human.'?</li>
+    <li>Would you be concerned if I admitted to any of the deeper whorls and ridges that make up the twisted, scorched plains of my own mental landscape?</li>
+    <li>Do you even really care one way or the other about any of my inane babbling up to this point?</li></ul>
 <br /><br />
 <i>&lt;I think not, sonny Jim&gt; - [...but I must tell them something...]</i>
 <br /><br />
