--- a/weblog.html
+++ b/weblog.html
@@ -15,7 +15,7 @@
 <br /> 
 <div class="width"><h2>A Little Background Information</h2>
 <br /><br />
-I'm sure that some of you may know how much I truly abhor about the general state of 'blogging' these days. I really and truly detest having to take the time to rearrange my thoughts in a manner easy for other to understand. I didn't  have these epiphanies or follow these mental tangents in anything resembling a 'normal' mental state. I don't think like you humans, at all. I swear I lose brain cells everytime someone asks me to explain what I just said. It's 
+I'm sure that some of you may know how much I truly abhor about the general state of 'blogging' these days. I really and truly detest having to take the time to rearrange my thoughts in a manner easy for other to understand. I didn't  have these epiphanies or follow these mental tangents in anything resembling a 'normal' mental state. I don't think like you humans, at all. I swear I lose brain cells everytime someone asks me to explain what I just said. It's just so damn frustrating...
 <br /><br />
 However, I have also come to the conclusion (quite painfully I might add) that I really can't get around it anymore if I want to be taken seriously these days in my chosen field. 
 <br /><br />
@@ -31,9 +31,9 @@ Each and every has a 'Committee of Lunatics' within us. These are the facets tha
 <br /><br />
 A long time ago when asked to write a blurb for a unnamed social media site, I wrote simply this:
 <br /><br />
-<i>Who I am is strangely difficult for me to explain to someone else...
-Sometimes, I do not believe that I, myself, know for sure...
-A safe description would be the 'odd man out' as it were...
+<i>Who I am is strangely difficult for me to explain to someone else...<br />
+Sometimes, I do not believe that I, myself, know for sure...<br />
+A safe description would be the 'odd man out' as it were...<br />
 Always striving towards something, yet jaded by the enormity of it all.</i>
 <br /><br />
 Now, don't get me wrong... I would still be glad to feel justified with merely prattling off some meaningless drivel to explain my presence here; or even content with the thought of being allowed to only 'allude' with hints, and mayhap, a shadowy glimpse of those daemons who drive my 'particular' intellectual thirst which seem so evident to those who may have actually met me.
