--- a/weblog.html
+++ b/weblog.html
@@ -14,7 +14,7 @@
 <br /> 
 <br /> 
 <div class="width"><h2>A Little Background Information</h2>
-<br /><br />
+<br />
 I'm sure that some of you may know how much I truly abhor about the general state of 'blogging' these days. I really and truly detest having to take the time to rearrange my thoughts in a manner easy for other to understand. I didn't  have these epiphanies or follow these mental tangents in anything resembling a 'normal' mental state. I don't think like you humans, at all. I swear I lose brain cells everytime someone asks me to explain what I just said. It's just so damn frustrating...
 <br /><br />
 However, I have also come to the conclusion (quite painfully I might add) that I really can't get around it anymore if I want to be taken seriously these days in my chosen field. 
@@ -22,11 +22,11 @@ However, I have also come to the conclusion (quite painfully I might add) that I
 With that said, let's get started and hope things don't 'esplode' all over us...
 <br /><br />
 <h3>So what exactly is 'a Committee of Lunatics'?</h3>
-<br /><br />
-Each and every has a 'Committee of Lunatics' within us. These are the facets that make us who we are. A very few of us can actually talk back and forth between each facet, using this information to better ourselves and those around us. As for proof of this, I give you the following data to contemplate at your leisure...  
+<br />
+Each and every one of us has a 'Committee of Lunatics' within us. These are the facets that make us who we are. The voices you hear when noone else is speaking (and sometimes when they are). A very few of us can actually talk back and forth between each facet, using this information to better ourselves and those around us. As for proof of this, I give you the following internal conversation to contemplate at your leisure...  
 <br /><br />
 <h4>Prologue</h4>
-<br /><br />
+<br />
 <i>Where do I begin... What slippery slope must we traverse... What dark knowledge is safe to share and what is undesirous of same; and while we're thinking about it, do I even know how to tell the difference...</i>
 <br /><br />
 A long time ago when asked to write a blurb for a unnamed social media site, I wrote simply this:
@@ -41,7 +41,7 @@ Now, don't get me wrong... I would still be glad to feel justified with merely p
 <i>But I digress...</i>
 <br /><br />
 <h4>Onward</h4>
-<br /><br />
+<br />
 <i>Now, where was I? Oh, yes... The 'reason' for my presence here.</i>
 <br /><br />
 <i>&lt;hrm, so many tangents... so little time... Why am I here, anyway?&gt;</i>
