--- a/weblog.html
+++ b/weblog.html
@@ -15,7 +15,7 @@
 <br /> 
 <div class="width"><h2>A Little Background Information</h2>
 <br />
-I'm sure that some of you may know how much I truly abhor about the general state of 'blogging' these days. I really and truly detest having to take the time to rearrange my thoughts in a manner easy for other to understand. I didn't  have these epiphanies or follow these mental tangents in anything resembling a 'normal' mental state. I don't think like you humans, at all. I swear I lose brain cells everytime someone asks me to explain what I just said. It's just so damn frustrating...
+I'm sure that some of you may know how much I truly abhor the general state of 'blogging' these days. I really and truly detest having to take the time to rearrange my thoughts in a manner easy for other to understand. I didn't  have these epiphanies or follow these mental tangents in anything resembling a 'normal' mental state. I don't think like you humans, at all. I swear I lose brain cells everytime someone asks me to explain what I just said. It's just so damn frustrating...
 <br /><br />
 However, I have also come to the conclusion (quite painfully I might add) that I really can't get around it anymore if I want to be taken seriously these days in my chosen field. 
 <br /><br />
