--- a/contact.html
+++ b/contact.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<head> 
-<title>A Committee of Lunatics - About</title> 
-<style type="text/css" media="screen">@import "css/acol_base.css";</style> 
-<meta http-equiv="content-type" content="text/html; charset=utf-8" /> 
-</head> 
-<body> 
-<center><p> 
-<div id="nav"><a href="about.html">About aCoL</a>  |  <a href="index.html">Home Page</a>  |  <a href="weblog.html">Blog Entries</a>  |  <a href="contact.html" id="current">Contact aCoL</a>  |  <a href="projects.html">Current Projects</a></div> 
-<br /> 
-<br /> 
-<br /> 
-<br /> 
-<br /> 
-<br /> 
-<div class="width">If you have any questions or want to offer me interesting work in my field, I can be reached at <a href="mailto:jerry.w.jackson@gmail.com?Subject=Referred by schade.github.com contact page">this</a> email address.</div> 
-<br /> 
-<br /> 
-<br /> 
-<a href="index.html">Back to the aCoL Home page</a> 
-<br /> 
-</p></center> 
-<center><p><div class="footer"><a href="http://validator.w3.org/check?uri=referer"><img class="noborder" src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.1" height="23" width="66" border="0" /></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;All site contents, unless otherwise stated, are copyrighted &copy;2011 A Committee of Lunatics&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://jigsaw.w3.org/css-validator/"><img class="noborder" style="border:0;width:66px;height:23px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" /></a></div></p></center> 
-</body> 
+<head>
+<title>A Committee of Lunatics - About</title>
+<style type="text/css" media="screen">@import "css/acol_base.css";</style>
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<meta http-equiv="Content-Language" content="en-us">
+</head>
+<body>
+<center><p>
+<div id="nav"><a href="about.html">About aCoL</a>  |  <a href="index.html">Home Page</a>  |  <a href="weblog.html">Blog Entries</a>  |  <a href="contact.html" id="current">Contact aCoL</a>  |  <a href="projects.html">Current Projects</a></div>
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<div class="width">If you have any questions or want to offer me interesting work in my field, I can be reached at <a href="mailto:jerry.w.jackson@gmail.com?Subject=Referred by schade.github.com contact page">this</a> email address.</div>
+<br />
+<br />
+<br />
+<a href="index.html">Back to the aCoL Home page</a>
+<br />
+</p></center>
+<center><p><div class="footer"><a href="http://validator.w3.org/check?uri=referer"><img class="noborder" src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.1" height="23" width="66" border="0" /></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;All site contents, unless otherwise stated, are copyrighted &copy;2011 A Committee of Lunatics&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://jigsaw.w3.org/css-validator/"><img class="noborder" style="border:0;width:66px;height:23px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" /></a></div></p></center>
+</body>
 </html>
