--- a/projects.html
+++ b/projects.html
@@ -1,28 +1,29 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<head> 
-<title>A Committee of Lunatics - About</title> 
-<style type="text/css" media="screen">@import "css/acol_base.css";</style> 
-<meta http-equiv="content-type" content="text/html; charset=utf-8" /> 
-</head> 
-<body> 
-<center><p> 
-<div id="nav"><a href="about.html">About aCoL</a>  |  <a href="index.html">Home Page</a>   |  <a href="weblog.html">Blog Entries</a>  |  <a href="contact.html">Contact aCoL</a>  |  <a href="projects.html" id="current">Current Projects</a></div> 
-<br /> 
-<br /> 
-<br /> 
-<br /> 
-<br /> 
-<br /> 
+<head>
+<title>A Committee of Lunatics - About</title>
+<style type="text/css" media="screen">@import "css/acol_base.css";</style>
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<meta http-equiv="Content-Language" content="en-us">
+</head>
+<body>
+<center><p>
+<div id="nav"><a href="about.html">About aCoL</a>  |  <a href="index.html">Home Page</a>   |  <a href="weblog.html">Blog Entries</a>  |  <a href="contact.html">Contact aCoL</a>  |  <a href="projects.html" id="current">Current Projects</a></div>
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
 <div class="width">Currently, I am working on the following projects:
-<br /> 
+<br />
 <ul><li><a href="http://github.com/schade/ironfan-homebase">homebase</a>: my personal fork of <a href="http://github.com/infochimps-labs/ironfan-homebase">infochimps-labs/ironfan-homebase</a></li><li><a href="http://github.com/schade/kobol">kobol</a>: a set of modular libraries for building X applications</li><li><a href="http://github.com/schade/pawl">pawl</a>: a collection of utilities intended to be useful for newer features in CouchDB</li><li><a href="http://github.com/schade/tumen_miner">tumen_miner</a>: experimental BitCoin miner; uses WebCL for pooled block calculations. Forked from <a href="http://github.com/temujin9/tumen_miner">temujin9's version</a>.</li><li><a href="http://dev.vyncup.t9productions.com:44384/tdh/_design/tdh_public/tdhmockup.html">Vyncup</a>: an event database </li></ul>
-</div> 
-<br /> 
-<br /> 
-<br /> 
-<a href="index.html">Back to the aCoL Home page</a> 
-<br /> 
-</p></center> 
-<center><p><div class="footer"><a href="http://validator.w3.org/check?uri=referer"><img class="noborder" src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.1" height="23" width="66" border="0" /></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;All site contents, unless otherwise stated, are copyrighted &copy;2011 A Committee of Lunatics&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://jigsaw.w3.org/css-validator/"><img class="noborder" style="border:0;width:66px;height:23px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" /></a></div></p></center> 
-</body> 
+</div>
+<br />
+<br />
+<br />
+<a href="index.html">Back to the aCoL Home page</a>
+<br />
+</p></center>
+<center><p><div class="footer"><a href="http://validator.w3.org/check?uri=referer"><img class="noborder" src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.1" height="23" width="66" border="0" /></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;All site contents, unless otherwise stated, are copyrighted &copy;2011 A Committee of Lunatics&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://jigsaw.w3.org/css-validator/"><img class="noborder" style="border:0;width:66px;height:23px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" /></a></div></p></center>
+</body>
 </html>
