--- a/weblog.html
+++ b/weblog.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<head> 
-<title>A Committee of Lunatics - Home</title> 
-<style type="text/css" media="screen">@import "css/acol_base.css";</style> 
-<meta http-equiv="content-type" content="text/html; charset=utf-8" /> 
-</head> 
-<body> 
-<center><p> 
-<div id="nav"><a href="about.html">About aCoL</a>  |  <a href="index.html">Home Page</a>  |  <a href="weblog.html" id="current">Blog Entries</a>  |  <a href="contact.html">Contact aCoL</a>  |  <a href="projects.html">Current Projects</a></div> 
-<br /> 
-<br /> 
-<br /> 
-<br /> 
-<br /> 
-<br /> 
+<head>
+<title>A Committee of Lunatics - Home</title>
+<style type="text/css" media="screen">@import "css/acol_base.css";</style>
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<meta http-equiv="Content-Language" content="en-us">
+</head>
+<body>
+<center><p>
+<div id="nav"><a href="about.html">About aCoL</a>  |  <a href="index.html">Home Page</a>  |  <a href="weblog.html" id="current">Blog Entries</a>  |  <a href="contact.html">Contact aCoL</a>  |  <a href="projects.html">Current Projects</a></div>
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
 <div class="width"><h2>A Little Background Information</h2>
 <br />
 I'm sure that some of you may know how much I truly abhor the general state of 'blogging' these days. I really and truly detest having to take the time to rearrange my thoughts in a manner easy for other to understand. I didn't  have these epiphanies or follow these mental tangents in anything resembling a 'normal' mental state. I don't think like you humans, at all. I swear I lose brain cells everytime someone asks me to explain what I just said. It's just so damn frustrating...
 <br /><br />
-However, I have also come to the conclusion (quite painfully I might add) that I really can't get around it anymore if I want to be taken seriously these days in my chosen field. 
+However, I have also come to the conclusion (quite painfully I might add) that I really can't get around it anymore if I want to be taken seriously these days in my chosen field.
 <br /><br />
 With that said, let's get started and hope things don't 'esplode' all over us...
 <br /><br />
 <h3>So what exactly is 'a Committee of Lunatics'?</h3>
 <br />
-Each and every one of us has a 'Committee of Lunatics' within us. These are the facets that make us who we are. The voices you hear when noone else is speaking (and sometimes when they are). A very few of us can actually talk back and forth between each facet, using this information to better ourselves and those around us. As for proof of this, I give you the following internal conversation to contemplate at your leisure...  
+Each and every one of us has a 'Committee of Lunatics' within us. These are the facets that make us who we are. The voices you hear when noone else is speaking (and sometimes when they are). A very few of us can actually talk back and forth between each facet, using this information to better ourselves and those around us. As for proof of this, I give you the following internal conversation to contemplate at your leisure...
 <br /><br />
 <h4>Prologue</h4>
 <br />
@@ -57,13 +58,13 @@ Ah hah! but I have already told you so much about me; what more is there to tell
 <i>discussion tabled until internal committee decides on the proper response</i>
 <br />
 <i>-- @the Management</i>
-</div> 
-<br /> 
-<br /> 
-<br /> 
-<br /> 
-<br /> 
-</p></center> 
-<center><p><div class="footer"><a href="http://validator.w3.org/check?uri=referer"><img class="noborder" src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.1" height="23" width="66" border="0" /></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;All site contents, unless otherwise stated, are copyrighted &copy;2011 A Committee of Lunatics&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://jigsaw.w3.org/css-validator/"><img class="noborder" style="border:0;width:66px;height:23px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" /></a></div></p></center> 
-</body> 
+</div>
+<br />
+<br />
+<br />
+<br />
+<br />
+</p></center>
+<center><p><div class="footer"><a href="http://validator.w3.org/check?uri=referer"><img class="noborder" src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.1" height="23" width="66" border="0" /></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;All site contents, unless otherwise stated, are copyrighted &copy;2011 A Committee of Lunatics&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://jigsaw.w3.org/css-validator/"><img class="noborder" style="border:0;width:66px;height:23px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" /></a></div></p></center>
+</body>
 </html>
