--- a/404.html
+++ b/404.html
@@ -1,33 +1,29 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<head> 
-<title>A Committee of Lunatics - 404 - Page Not Found</title> 
-<style type="text/css" media="screen">@import "css/acol_base.css";</style> 
-<meta http-equiv="content-type" content="text/html; charset=utf-8" /> 
+<head>
+<title>A Committee of Lunatics - 404 - Page Not Found</title>
+<style type="text/css" media="screen">@import "css/acol_base.css";</style>
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta http-equiv="Content-Language" content="en-us">
 </head>
 <body>
-<center><p> 
-<div id="nav"><a href="about.html">About aCoL</a>  |  <a href="index.html">Home Page</a>  |  <a href="weblog.html">Blog Entries</a>  |  <a href="contact.html">Contact aCoL</a>  |  <a href="projects.html">Current Projects</a></div> 
-<br /> 
-<br /> 
-<br /> 
-<br /> 
-<br /> 
+<center><p>
+<div id="nav"><a href="about.html">About aCoL</a>  |  <a href="index.html">Home Page</a>  |  <a href="weblog.html">Blog Entries</a>  |  <a href="contact.html">Contact aCoL</a>  |  <a href="projects.html">Current Projects</a></div>
 <br />
-<div class="width">
+<br />
+<br />
+<div class="width"><center>
 Once upon a midnight dreary, while I websurfed, weak and weary,<br />
 ...Over many a strange and spurious website of 'hot chicks galore',<br />
 ...While I clicked my fav'rite bookmark, suddenly there came a warning,<br />
 ...And my heart was filled with mourning, mourning for my dear amour.<br />
 ..."'Tis not possible," I muttered, "give me back my cheap hardcore!" -<br />
 Quoth the server, "404".
-</div> 
-<br /> 
-<br /> 
-<br /> 
-<br /> 
-<br /> 
-</p></center> 
-<center><p><div class="footer"><a href="http://validator.w3.org/check?uri=referer"><img class="noborder" src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.1" height="23" width="66" border="0" /></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;All site contents, unless otherwise stated, are copyrighted &copy;2011 A Committee of Lunatics&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://jigsaw.w3.org/css-validator/"><img class="noborder" style="border:0;width:66px;height:23px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" /></a></div></p></center> 
+</center></div>
+<br />
+<iframe src="http://notfound-static.fwebservices.be/404/index.html?&amp;key=a76d9aab91a9ac5ab6897d098cfcce28" width="100%" height="650" frameborder="0"></iframe>
+<br />
+<br />
+</p></center>
+<center><p><div class="footer"><a href="http://validator.w3.org/check?uri=referer"><img class="noborder" src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.1" height="23" width="66" border="0" /></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;All site contents, unless otherwise stated, are copyrighted &copy;2011 A Committee of Lunatics&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://jigsaw.w3.org/css-validator/"><img class="noborder" style="border:0;width:66px;height:23px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" /></a></div></p></center>
 </body>
 </html>
