adjusting layout of 404 page

--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
 <br />
 <br />
 <br />
-<div class="width"><center>
+<div class="404"><center>
 Once upon a midnight dreary, while I websurfed, weak and weary,<br />
 ...Over many a strange and spurious website of 'hot chicks galore',<br />
 ...While I clicked my fav'rite bookmark, suddenly there came a warning,<br />
@@ -19,6 +19,7 @@ Once upon a midnight dreary, while I websurfed, weak and weary,<br />
 ..."'Tis not possible," I muttered, "give me back my cheap hardcore!" -<br />
 Quoth the server, "404".
 </center></div>
+<br />
 <br />
 <iframe src="http://notfound-static.fwebservices.be/404/index.html?&amp;key=a76d9aab91a9ac5ab6897d098cfcce28" width="100%" height="650" frameborder="0"></iframe>
 <br />
