adjusting layout of 404 page; part quatre

--- a/404.html
+++ b/404.html
@@ -13,11 +13,11 @@
 <br />
 <div class="404"><center>
 Once upon a midnight dreary, while I websurfed, weak and weary,<br />
-...Over many a strange and spurious website of 'hot chicks galore',<br />
+...O'er many a strange and spurious website of 'hot chicks galore',<br />
 ...While I clicked my fav'rite bookmark, suddenly there came a warning,<br />
 ...And my heart was filled with mourning, mourning for my dear amour.<br />
-..."'Tis not possible," I muttered, "give me back my cheap hardcore!" -<br />
-Quoth the server, "404".
+..."'Tis not possible," I muttered, "give me back my cheap hardcore!"...<br />
+-   Quoth the server, "404".
 </center></div>
 <br />
 <br />
