css cleanup and refactoring

--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
 <br />
 <br />
 <br />
-<div class="404"><center>
+<div class="404">
 Once upon a midnight dreary, while I websurfed, weak and weary,<br />
 ...O'er many a strange and spurious website of 'hot chicks galore',<br />
 ...While I clicked my fav'rite bookmark, suddenly there came a warning,<br />
@@ -20,11 +20,11 @@ Once upon a midnight dreary, while I websurfed, weak and weary,<br />
 <br />
 -   Quoth the server, "404".
 <br />
-<hr />
-</center></div>
+<hr class="404">
+</div>
 <br />
 <br />
-<iframe src="http://notfound-static.fwebservices.be/404/index.html?&amp;key=a76d9aab91a9ac5ab6897d098cfcce28" width="100%" height="650" frameborder="0"></iframe>
+<iframe id="notfound_org" src="http://notfound-static.fwebservices.be/404/index.html?&amp;key=a76d9aab91a9ac5ab6897d098cfcce28" width="100%" height="650" frameborder="0"></iframe>
 <br />
 <br />
 </p></center>
