404.html; changed css paramaters, should fix

--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
 <br />
 <br />
 <br />
-<div class="404">
+<div class="fourohfour">
 Once upon a midnight dreary, while I websurfed, weak and weary,<br />
 ...O'er many a strange and spurious website of 'hot chicks galore',<br />
 ...While I clicked my fav'rite bookmark, suddenly there came a warning,<br />
@@ -21,7 +21,7 @@ Once upon a midnight dreary, while I websurfed, weak and weary,<br />
 <br />
 -   Quoth the server, "404".
 <br />
-<hr class="404">
+<hr class="fourohfour">
 </div>
 <br />
 <br />
