--- a/404.html
+++ b/404.html
@@ -13,14 +13,15 @@
 <br />
 <br />
 <br />
+
 <div class="fourohfour">
-Once upon a midnight dreary, while I websurfed, weak and weary,<br />
+<p class="code">Once upon a midnight dreary, while I websurfed, weak and weary,<br />
 ...O'er many a strange and spurious website of 'hot chicks galore',<br />
 ...While I clicked my fav'rite bookmark, suddenly there came a warning,<br />
 ...And my heart was filled with mourning, mourning for my dear amour.<br />
 ..."'Tis not possible," I muttered, "give me back my cheap hardcore!"...<br />
 <br />
--   Quoth the server, "404".
+-   Quoth the server, "404".</p>
 <br />
 <hr class="fourohfour">
 </div>
