removing extraneous height from last image of page.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Regardless of the ongoing sitewide changes, welcome to my little public piece of
 	All site contents, unless otherwise stated, are copyright &copy; 2009-2013, Jerry W Jackson - all rights reserved.
 	<br />
 	<br />
-	<img class="centered" src="images/HTML5_Logo_32.png" alt="This page contains both valid HTML5 and valid CSS3" height="32px">
+	<img class="centered" src="images/HTML5_Logo_32.png" alt="This page contains both valid HTML5 and valid CSS3">
 </div>
 </body>
 </html>
