activated div#outer on all current pages; including blank.html.

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
 <meta charset="utf-8">
 </head>
 <body>
+<div id=outer>
 <div class="header"><img id="logo" src="images/logo.png" alt="a Committee of Lunatics"></div>
 <div id="nav"><a href="about.html">About Me</a>  |  <a href="index.html" id="current">Home Page</a>  |  <a href="weblog.html">Blog Entries</a>  |  <a href="contact.html">Contact Me</a>  |  <a href="resume.html">My R&eacute;sum&eacute;</a></div>
 <div id="wrapper">
@@ -27,6 +28,7 @@
 	<br />
 	<br />
 	<img class="centered" src="images/HTML5_Logo_32.png" alt="This page contains both valid HTML5 and valid CSS3">
+</div>
 </div>
 </body>
 </html>
