--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <title>a Committee of Lunatics - 404</title>
-<style type="text/css" media="screen">@import "css/acol_light.css";</style>
+<style type="text/css" media="screen">@import "css/acol_dark.css";</style>
 <meta charset="utf-8">
 </head>
 <body>
