renamed logo.png to logo-right-png and created logo-left.png; logo-right is for personal pages, logo-left.png is for company pages.

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div id=outer>
-<div class="header"><img id="logo" src="images/logo.png" alt="a Committee of Lunatics"></div>
+<div class="header"><img id="logo" src="images/logo-right.png" alt="a Committee of Lunatics"></div>
 <div id="nav"><a href="about.html" id="current">About Me</a>  |  <a href="index.html">Home Page</a>  |  <a href="weblog.html">Blog Entries</a>  |  <a href="contact.html">Contact Me</a>  |  <a href="resume.html">My R&eacute;sum&eacute;</a></div>
 <div id="wrapper">
 <br />
