--- a/blank.html
+++ b/blank.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div id=outer>
-<div class="header"><img id="logo" src="images/logo.png" alt="a Committee of Lunatics"></div>
+<div class="header"><img id="logo" src="images/logo-right.png" alt="a Committee of Lunatics"></div>
 <div id="nav"><a href="about.html">About Me</a>  |  <a href="index.html" id="current">Blank Page</a>  |  <a href="weblog.html">Blog Entries</a>  |  <a href="contact.html">Contact Me</a>  |  <a href="resume.html">My R&eacute;sum&eacute;</a></div><br />
 <br />
 <br />
