embedded 2013-Resume.pdf in resume.html.

--- a/about.html
+++ b/about.html
@@ -12,6 +12,16 @@
 <div id="wrapper">
 <br />
 <br />
+I'm a tinkerer; I've always been a tinkerer.
+<br />
+<br />
+Most likely, whatever it is that finally does me in will be something I'm tinkering with.
+<br />
+<br />
+I don't discriminate either; I can probably find a way to tinker with most things. Computers simply offer more bang for the buck in this regard; not only can I tinker with the hardware which makes it up, I've learned many varied ways to tinker with the software inside that hardware I so lovingly assembled.
+<br />
+<br />
+I got into computers before the day of the personal computer; serving a glorious stint under the watchful gaze of bank upon bank of spinning magnetic reel. I once refused a job offer in those early days because I erroneously thought no one would buy into the PC market. Time passed and I eventually learned from my mistake. Many OSes have come and gone since then; these days I use Linux and FreeBSD depending on what I want to do.
 <br />
 <br />
 <br />
