--- a/resume.html
+++ b/resume.html
@@ -12,6 +12,7 @@
 <div id="wrapper">
 <br />
 <br />
+<embed src="http://schade.acommitteeoflunatics.com/files/2013-Resume.pdf" width="900">
 <br />
 <br />
 <br />
