adjusting layout of embedded 2013-Resume.pdf in resume.html; part deaux,spelling mistake.

--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,7 @@
 <div id="wrapper">
 <br />
 <br />
-<embed src="http://schade.acommitteeoflunatics.com/files/2013-Resume.pdf" width="900">
+<embed src="http://schade.acommitteeoflunatics.com/files/2013-Resume.pdf" width="900"heigth="3000">
 <br />
 <br />
 <br />
