manipulated text string after coderwall badge.

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 <br />
 <br />
 <br />
-<a href="https://coderwall.com/schade"><img alt="Endorse schade on Coderwall" src="http://api.coderwall.com/schade/endorsecount.png" />&nbsp;&nbsp;Coderwall</a>
+<a href="https://coderwall.com/schade"><img alt="Endorse schade on Coderwall" src="http://api.coderwall.com/schade/endorsecount.png" /><br />&nbsp;&nbsp;Coderwall</a>
 <br />
 <br />
 <br />
