removing scrollbar from embedded pdf.

--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,9 @@
 	<a href="http://www.acommitteeoflunatics.com/index.html">click here to go back to <i>a Committee of Lunatics</i></a>
 	<br />
 	<br />
+<a href="index.html">click here to go back to my main page</a>
+	<br />
+	<br />
 	All site contents, unless otherwise stated, are copyright &copy; 2009-2013, Jerry W Jackson - all rights reserved.
 	<br />
 	<br />
