--- a/about.html
+++ b/about.html
@@ -34,6 +34,9 @@ I got into computers before the day of the personal computer; serving a glorious
 	<a href="http://www.acommitteeoflunatics.com/index.html">click here to go back to <i>a Committee of Lunatics</i></a>
 	<br />
 	<br />
+	<a href="index.html">click here to go back to my main page</a>
+	<br />
+	<br />
 	All site contents, unless otherwise stated, are copyright &copy; 2009-2013, Jerry W Jackson - all rights reserved.
 	<br />
 	<br />
