--- a/resume.html
+++ b/resume.html
@@ -12,14 +12,17 @@
 <div id="wrapper">
 <br />
 <br />
-<div class="width">If you have any questions or want to offer me interesting work in my field, I can be reached at <a href="mailto:schade@acommitteeoflunatics.com?Subject=Referred from contact page">this</a> email address.
+<div class="width">If you have any questions or want to offer me interesting work in my field, I can be reached at <a href="mailto:schade@acommitteeoflunatics.com?Subject=Referred from contact page">this</a> email address. If you'd like to save or print a copy of my resume, feel free to use the pdf toolbar at the bottom of the second page; note that you will have to have your mouse cursor over the resume itself before the toolbar becomes visible.
 <br />
 <br />
-<embed src="http://schade.acommitteeoflunatics.com/files/2013-Resume.pdf" width="820" height="2270"  type="application/pdf" style="color:black;"></div>
+<embed src="http://schade.acommitteeoflunatics.com/files/2013-Resume.pdf" width="820" height="2280"  type="application/pdf" style="color:black;"></div>
 <br />
 <br />
 <div class="footer">
 	<a href="http://www.acommitteeoflunatics.com/index.html">click here to go back to <i>a Committee of Lunatics</i></a>
+	<br />
+	<br />
+	<a href="index.html">click here to go back to my main page</a>
 	<br />
 	<br />
 	All site contents, unless otherwise stated, are copyright &copy; 2009-2013, Jerry W Jackson - all rights reserved.
