added pdf image to resume.html, wrote out the acommitteoflunatics about page content; part deaux.

--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,7 @@
 <br />
 <div class="width">If you have any questions or want to offer me interesting work in my field, I can be reached at <a href="mailto:schade@acommitteeoflunatics.com?Subject=Referred from contact page">this</a> email address.
 <br /><br />You will need to have the acrobat reader plugin installed to view the embedded copy of my r&eacute;sum&eacute;. 
-<br /><br />For those of you who just want a download link, here is the actual file. => <a href="files/2013-Resume.pdf"><img id="logo" src="images/pdf.gif"></a> 2013-R&eacute;sum&eacute;.pdf</a>
+<br /><br />For those of you who just want a download link, here is the actual file. => <a href="files/2013-Resume.pdf"><img class="icon" src="images/pdf.gif"> 2013-R&eacute;sum&eacute;.pdf</a>
 <br /><br />If you are are using Chrome ( or pretty much any webkit based browser ) and you would like to save or print a copy of my r&eacute;sum&eacute; use the link I just provided. Otherwise,  you'd need to use the auto-hiding,adobe-native pdf toolbar in the bottom right corner of the second page; note that you will have to move your mouse cursor over that corner of the r&eacute;sum&eacute; itself before the toolbar becomes visible. I use Chrome personally, but it does have the occasional minor logic issue like this one that make for some annoyance. Firefox users get a lovely toolbar above the pdf, so no worries there; now if they would just improve their tabbing code...
 <br />
 <br />
