set img height property to near line height.

--- a/resume.html
+++ b/resume.html
@@ -20,7 +20,7 @@ You will need to have the acrobat reader plugin installed to view the embedded c
 <br />
 For those of you who just want a download link, below is the actual pdf file.
 <ul>
-	<li><img class="icon" src="images/pdf.gif"><a href="files/2013-Resume.pdf">  2013-R&eacute;sum&eacute;.pdf</a></li>
+	<li><img class="icon" src="images/pdf.gif" height="18"><a href="files/2013-Resume.pdf">  2013-R&eacute;sum&eacute;.pdf</a></li>
 </ul>
 <br />
 If you are are using Chrome ( or pretty much any webkit based browser ) and you would like to save or print a copy of my r&eacute;sum&eacute; use the link I just provided. Otherwise,  you'd need to use the auto-hiding,adobe-native pdf toolbar in the bottom right corner of the second page; note that you will have to move your mouse cursor over that corner of the r&eacute;sum&eacute; itself before the toolbar becomes visible. I use Chrome personally, but it does have the occasional minor logic issue like this one that make for some annoyance. Firefox users get a lovely toolbar above the pdf, so no worries there; now if they would just improve their tabbing code...
