adjusting new email link on contact.html.

--- a/contact.html
+++ b/contact.html
@@ -14,11 +14,11 @@
 <br />
 <br />
 <ul>
-	<li style="list-style-type:none;"><a href="https://coderwall.com/schade"><img alt="Endorse schade on Coderwall" src="http://api.coderwall.com/schade/endorsecount.png" /><br />&nbsp;&nbsp;Coderwall</a></li>
+	<li style="list-style-type:none;"><a href="https://coderwall.com/schade"><img alt="Endorse schade on Coderwall" src="http://api.coderwall.com/schade/endorsecount.png" />&nbsp;&nbsp;Coderwall</a></li>
 </ul>
 <br />
 <ul>
-	<li style="list-style-type:none;"><a href="mailto:schade@acommitteeoflunatics.com?Subject=Referred by contact page"><img alt="send email to schade" src="images/mail.png" height="32" /><br />&nbsp;&nbsp;Email</a></li>
+	<li style="list-style-type:none;"><a href="mailto:schade@acommitteeoflunatics.com?Subject=Referred by contact page"><img alt="send email to schade" src="images/mail.png" height="32" />&nbsp;&nbsp;Email</a></li>
 </ul>
 <br />
 <br />
