adding changes from main site.

--- a/resume.html
+++ b/resume.html
@@ -39,7 +39,11 @@ If you are are using Chrome ( or pretty much any webkit based browser ) and you 
 	All site contents, unless otherwise stated, are copyright &copy; 2009-2013, Jerry W Jackson - all rights reserved.
 	<br />
 	<br />
-	<img class="centered" src="images/HTML5_Logo_32.png" alt="This page contains both valid HTML5 and valid CSS3">
+	<div class="width">
+		<img id="html5-logo" src="images/HTML5_Logo_32.png" alt="This page contains valid HTML5">
+		<img id="css3-logo" src="images/CSS3_Logo_32.png" alt="This page contains valid CSS3">
+		<br clear="all">
+	</div>
 </div>
 </div>
 </body>
