replacing embedded resume pdf with text version and links to 2 msword format versions

--- a/resume.html
+++ b/resume.html
@@ -10,35 +10,113 @@
 <div class="header"><img id="logo" src="images/logo-right.png" alt="a Committee of Lunatics"></div>
 <div id="nav"><a href="about.html">About Me</a>  |  <a href="index.html">Home Page</a>  |  <a href="weblog.html">Blog Entries</a>  |  <a href="contact.html">Contact Me</a>  |  <a href="resume.html" id="current">My R&eacute;sum&eacute;</a></div>
 <div id="wrapper">
-<br />
-<br />
+<br>
+<br>
 <div class="width">If you have any questions or want to offer me interesting work in my field, I can be reached at <a href="mailto:schade@acommitteeoflunatics.com?Subject=Referred from contact page">this</a> email address.
-<br />
-<br />
-You will need to have the acrobat reader plugin installed to view the embedded copy of my r&eacute;sum&eacute;. 
-<br />
-<br />
-For those of you who just want a download link, below is the actual pdf file.
+<br>
+<br>
+For those of you who just want a download link, below are two versions of the actual file:
+<br>
 <ul>
-	<li style="list-style-type:none;"><img class="icon" src="images/pdf.gif" height="18"><a href="files/2013-Resume.pdf">&nbsp;&nbsp;2013-R&eacute;sum&eacute;.pdf</a></li>
+<li style="list-style-type:none;"><img class="icon" src="images/pdf.gif" height="18"><a href="files/Simpler-Resume-nonbulleted.docx">Simpler-Resume-nonbulleted.docx</a></li> with nice indenting and <li style="list-style-type:none;"><img class="icon" src="images/pdf.gif" height="18"><a href="files/Simplest-Resume.docx">Simplest-Resume.docx</a></li>
+which has no indentation, whatsoever.
 </ul>
-<br />
-If you are are using Chrome ( or pretty much any webkit based browser ) and you would like to save or print a copy of my r&eacute;sum&eacute; use the link I just provided. Otherwise,  you'd need to use the auto-hiding,adobe-native pdf toolbar in the bottom right corner of the second page; note that you will have to move your mouse cursor over that corner of the r&eacute;sum&eacute; itself before the toolbar becomes visible. I use Chrome personally, but it does have the occasional minor logic issue like this one that make for some annoyance. Firefox users get a lovely toolbar above the pdf, so no worries there; now if they would just improve their tabbing code...
-<br />
-<br />
-<embed src="http://schade.acommitteeoflunatics.com/files/2013-Resume.pdf" width="900" height="2320"  type="application/pdf" style="color:black;"></div>
-<br />
-<br />
+<br>
+<br>
+Jerry W Jackson
+Austin, Texas
+<a href="mailto:schade@acommitteeoflunatics.com?Subject=Referred from contact page">schade@acommitteeoflunatics.com</a>
+<br>
+<br>
+Summary
+<br>
+I'm always ready to learn something new; in fact, the pursuit of knowledge I don't yet possess is one of my driving factors in daily life. The burning question thus becomes, "How can my vast array of skills, knowledge, and experience help you and your company assist me in learning even more?"
+<br>
+Experience
+<br>
+Owner/Developer
+a Committee of Lunatics
+August 2010 - Current
+Project -- kowm 
+technologies -- [ C++, Python, Ruby ]
+about -- open-source desktop window manager 
+designing a Ruby Build Environment associated with kowm
+developing a suite of libraries that support the building of modular X apps
+developing new X Window Manager using these frameworks
+Project -- tumen_miner 
+technologies -- [ JS, WebCL ]
+about -- open-source bitcoin miner based on krad_miner
+ongoing development to allow embedding of voluntary pooled bitcoin mining
+developing apps to take advantage of background mining via idle gpu processes
+Project -- VyncUp (TDHP Event List)
+technologies -- [ Python, CouchDB, HTML5, JS, jquery, node.js, backbone.js, underscore.js ]
+about -- a massively searchable NoSQL event database of bands, dancehalls and events in Texas
+developed non-flash browser-based file upload system for internal project use
+developed automated email daemon using CouchDB’s changes feed
+setup deploy and maintained backend for distributed version control system
+setup deploy and maintained backend for java-based webapp and CouchDB instance
+<br>
+Operations Manager
+Corner House Stock Photo, Inc.
+July 2008 -- Current
+responsible for all things hardware related within organization 
+owned and managed all specs related to hardware or infrastructure within company
+setup, deployed and maintained 10+ CentOS 5.3 co-located servers
+setup, deployed and maintained Cisco PIX 501 Security Appliance
+migrated to and maintained RackSpace cloud infrastructure
+designed current backup strategy for both physical and cloud systems
+currently developing archiving support for PicturEngine using Amazon Glacier
+maintained physical servers and software load for the following websites:
+Corner House Stock Photo [ www.cornerhousestock.com ]
+Picturesque [ www.picturesque.com ]
+PicturEngine [ www.picturengine.com ]
+<br>
+Network Operations Manager
+Century Subsidiaries 
+February 2008 -- August 2010
+designed and administered the corporate build environment in Python
+performed Quality Assurance testing on flagship software package
+designed and developed existing online help documentation for CenturyABS
+managed all server and client systems in a MS Windows-centric network
+responsible for daily operation and maintenance of an Avaya PBX system
+handled customer specific issues for deploying and integrating software solutions.
+<br>
+Managing Director, Operations
+Pet 4 Pets, Inc.
+November 2003 -- July 2007
+oversaw all daily operations of a 501(c)3 nonprofit organization
+was responsible for all daily IT operations as part of normal workload
+designed and developed organization's public-facing website
+setup, deployed, and maintained database of all provided animal care and all adoption records
+managed receiving and disbursement of all in-kind donations to organization
+<br>
+Lead Student Programmer
+State of California
+Department of Health Services
+Toxic Substance Control Division
+Procedures and Regulations Development Section
+June 1984 -- September 1984
+Trained and managed four other student programmers as team lead
+Developed and maintained new and existing Assembly language programs on a Motorola IV-Phase mainframe.
+Implemented new user interface designs for the existing database to increase productivity.
+Prepared and submitted detailed reports to other state agencies; including the governor's office
+<br>
+Skills List (in alphabetical order)
+<br>
+AFS, Agile Methodologies, Amazon VPC, Amazon Web Services, Android, Apache, Architecture amd64, Architecture arm, Architecture mips, Architecture powerpc, Architecture x86, backbone.js, Big Data, BIND9, Bitcoin, C Programming, C++ Programming, Chef, CIFS, Cloud Computing, Clustering, Computer Hardware, Computer Networking, Computer Security, CouchDB, CSS3, CVS, Database Administration, Debugging, Desktop Support, DHCP, Disaster Recovery, Distcc, DNS, Excel, express.js, ext2/3/4, Git, HTML5, IDS, IPSec, Ironfan, JavaScript, jQuery, Lighttpd, LVM2, MySQL, NAT, Network Architecture, NFSv3, NFSv4, Nginx, node.js, NoSQL, NTFS, OpenCL, Operations Engineering, Operations Management, OS FreeBSD, OS Linux, OS OSX, UNIX, OS Windows, Program Management, Python, Qemu, RAID(0/1/5/6/10), Rsync, Ruby, Samba, Sendmail, Shell Scripting, Software Architecture, Software Licensing, SSH, Storage, Strongswan, System Administration, TFTP, Virtualization, VMWare, VNC, VoIP, VPN, Web Development, WEP, Wireless Networking, WPA, Workflow Management, ZFS
+<br>
+<br>
+<br>
 <div class="footer">
 	<a href="http://www.acommitteeoflunatics.com/index.html">click here to go back to <i>a Committee of Lunatics</i></a>
-	<br />
-	<br />
+	<br>
+	<br>
 	<a href="index.html">click here to go back to my main page</a>
-	<br />
-	<br />
+	<br>
+	<br>
 	All site contents, unless otherwise stated, are copyright &copy; 2009-2013, Jerry W Jackson - all rights reserved.
-	<br />
-	<br />
+	<br>
+	<br>
 	<div class="width">
 		<img id="html5-logo" src="images/HTML5_Logo_32.png" alt="This page contains valid HTML5">
 		<img id="css3-logo" src="images/CSS3_Logo_32.png" alt="This page contains valid CSS3">
