replacing embedded resume pdf with text version and links to 2 msword format versions

--- a/resume.html
+++ b/resume.html
@@ -18,90 +18,161 @@
 For those of you who just want a download link, below are two versions of the actual file:
 <br>
 <ul>
-<li style="list-style-type:none;"><img class="icon" src="images/pdf.gif" height="18"><a href="files/Simpler-Resume-nonbulleted.docx">Simpler-Resume-nonbulleted.docx</a></li> with nice indenting and <li style="list-style-type:none;"><img class="icon" src="images/pdf.gif" height="18"><a href="files/Simplest-Resume.docx">Simplest-Resume.docx</a></li>
-which has no indentation, whatsoever.
+<li style="list-style-type:none;"><img class="icon" src="images/msword.png" height="18"><a href="files/Simpler-Resume-nonbulleted.docx">Simpler-Resume-nonbulleted.docx</a></li> which is nicely indented giving the illusion of a non-adorned bullet list and <li style="list-style-type:none;"><img class="icon" src="images/msword.png" height="18"><a href="files/Simplest-Resume.docx">Simplest-Resume.docx</a></li>
+which is entirely vertical and has no indentation whatsoever.
 </ul>
 <br>
 <br>
 Jerry W Jackson
+<br>
 Austin, Texas
+<br>
 <a href="mailto:schade@acommitteeoflunatics.com?Subject=Referred from contact page">schade@acommitteeoflunatics.com</a>
 <br>
 <br>
 Summary
 <br>
-I'm always ready to learn something new; in fact, the pursuit of knowledge I don't yet possess is one of my driving factors in daily life. The burning question thus becomes, "How can my vast array of skills, knowledge, and experience help you and your company assist me in learning even more?"
+<br>
+I'm always ready to learn something new; in fact, the pursuit of knowledge I don't yet possess is one of my driving factors in daily life. 
+<br>
+<br>
+The burning question thus becomes, "How can my vast array of skills, knowledge, and experience help you and your company assist me in learning even more?"
+<br>
 <br>
 Experience
 <br>
+<br>
 Owner/Developer
+<br>
 a Committee of Lunatics
+<br>
 August 2010 - Current
+<br>
 Project -- kowm 
+<br>
 technologies -- [ C++, Python, Ruby ]
+<br>
 about -- open-source desktop window manager 
+<br>
 designing a Ruby Build Environment associated with kowm
+<br>
 developing a suite of libraries that support the building of modular X apps
+<br>
 developing new X Window Manager using these frameworks
+<br>
 Project -- tumen_miner 
+<br>
 technologies -- [ JS, WebCL ]
+<br>
 about -- open-source bitcoin miner based on krad_miner
+<br>
 ongoing development to allow embedding of voluntary pooled bitcoin mining
+<br>
 developing apps to take advantage of background mining via idle gpu processes
+<br>
 Project -- VyncUp (TDHP Event List)
+<br>
 technologies -- [ Python, CouchDB, HTML5, JS, jquery, node.js, backbone.js, underscore.js ]
+<br>
 about -- a massively searchable NoSQL event database of bands, dancehalls and events in Texas
+<br>
 developed non-flash browser-based file upload system for internal project use
+<br>
 developed automated email daemon using CouchDB’s changes feed
+<br>
 setup deploy and maintained backend for distributed version control system
+<br>
 setup deploy and maintained backend for java-based webapp and CouchDB instance
 <br>
+<br>
 Operations Manager
+<br>
 Corner House Stock Photo, Inc.
+<br>
 July 2008 -- Current
+<br>
 responsible for all things hardware related within organization 
+<br>
 owned and managed all specs related to hardware or infrastructure within company
+<br>
 setup, deployed and maintained 10+ CentOS 5.3 co-located servers
+<br>
 setup, deployed and maintained Cisco PIX 501 Security Appliance
+<br>
 migrated to and maintained RackSpace cloud infrastructure
+<br>
 designed current backup strategy for both physical and cloud systems
+<br>
 currently developing archiving support for PicturEngine using Amazon Glacier
+<br>
 maintained physical servers and software load for the following websites:
-Corner House Stock Photo [ www.cornerhousestock.com ]
-Picturesque [ www.picturesque.com ]
-PicturEngine [ www.picturengine.com ]
+<br>
+<a href="http://www.cornerhousestock.com">Corner House Stock Photo</a>
+<br>
+<a href="http://www.picturesque.com">Picturesque</a>
+<br>
+<a href="http://www.picturengine.com">PicturEngine</a>
+<br>
 <br>
 Network Operations Manager
+<br>
 Century Subsidiaries 
+<br>
 February 2008 -- August 2010
+<br>
 designed and administered the corporate build environment in Python
+<br>
 performed Quality Assurance testing on flagship software package
+<br>
 designed and developed existing online help documentation for CenturyABS
+<br>
 managed all server and client systems in a MS Windows-centric network
+<br>
 responsible for daily operation and maintenance of an Avaya PBX system
+<br>
 handled customer specific issues for deploying and integrating software solutions.
 <br>
+<br>
 Managing Director, Operations
+<br>
 Pet 4 Pets, Inc.
+<br>
 November 2003 -- July 2007
+<br>
 oversaw all daily operations of a 501(c)3 nonprofit organization
+<br>
 was responsible for all daily IT operations as part of normal workload
+<br>
 designed and developed organization's public-facing website
+<br>
 setup, deployed, and maintained database of all provided animal care and all adoption records
+<br>
 managed receiving and disbursement of all in-kind donations to organization
 <br>
+<br>
 Lead Student Programmer
+<br>
 State of California
+<br>
 Department of Health Services
+<br>
 Toxic Substance Control Division
+<br>
 Procedures and Regulations Development Section
+<br>
 June 1984 -- September 1984
+<br>
 Trained and managed four other student programmers as team lead
+<br>
 Developed and maintained new and existing Assembly language programs on a Motorola IV-Phase mainframe.
+<br>
 Implemented new user interface designs for the existing database to increase productivity.
+<br>
 Prepared and submitted detailed reports to other state agencies; including the governor's office
 <br>
+<br>
 Skills List (in alphabetical order)
+<br>
 <br>
 AFS, Agile Methodologies, Amazon VPC, Amazon Web Services, Android, Apache, Architecture amd64, Architecture arm, Architecture mips, Architecture powerpc, Architecture x86, backbone.js, Big Data, BIND9, Bitcoin, C Programming, C++ Programming, Chef, CIFS, Cloud Computing, Clustering, Computer Hardware, Computer Networking, Computer Security, CouchDB, CSS3, CVS, Database Administration, Debugging, Desktop Support, DHCP, Disaster Recovery, Distcc, DNS, Excel, express.js, ext2/3/4, Git, HTML5, IDS, IPSec, Ironfan, JavaScript, jQuery, Lighttpd, LVM2, MySQL, NAT, Network Architecture, NFSv3, NFSv4, Nginx, node.js, NoSQL, NTFS, OpenCL, Operations Engineering, Operations Management, OS FreeBSD, OS Linux, OS OSX, UNIX, OS Windows, Program Management, Python, Qemu, RAID(0/1/5/6/10), Rsync, Ruby, Samba, Sendmail, Shell Scripting, Software Architecture, Software Licensing, SSH, Storage, Strongswan, System Administration, TFTP, Virtualization, VMWare, VNC, VoIP, VPN, Web Development, WEP, Wireless Networking, WPA, Workflow Management, ZFS
 <br>
